--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "ng-scrollreveal": "^2.2.0",
+    "ngx-scrollreveal": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
